# Config

./: .gitignore  CMakeLists.txt  README.md
cmake-tools/: GroupSources.cmake  add_subdirectory_with_folder.cmake
include/: Config.hpp
src/: Config.cpp
